<resources>
    <string name="app_config_title">Настройки приложения</string>
    <string name="settings">Настройки</string>
    <string name="general_settings_title">Общие настройки</string>
    <string name="server_ipv4_hint">IPv4 адрес сервера</string>
    <string name="device_name_hint">Название устройства</string>
    <string name="api_key_hint">API Ключ</string>
    <string name="map_points_count_hint">Количество точек на карте</string>
    <string name="snapshot_duration_seconds_hint">Время выполнения снапшота, сек.</string>
    <string name="data_retention_days_hint">Хранить данные, дней</string>
    <string name="map_layer_default_label">Слой карты по умолчанию</string>
    <string name="map_layer_action">Слой карты</string>
    <string name="map_search_hint">Найти адрес или место</string>
    <string name="map_search_action">Найти</string>
    <string name="map_search_not_found">Точка не найдена</string>
    <string name="map_cell_towers_layer_action">Сотовые вышки</string>
    <string name="map_cell_towers_marker_title">Базовая станция %1$s</string>
    <string name="map_cell_towers_current_title">Подключенная базовая станция</string>
    <string name="map_cell_towers_current_badge">Телефон подключен к этой вышке</string>
    <string name="map_cell_towers_range_meters">%1$d м</string>
    <string name="map_cell_towers_marker_snippet">MCC %1$d · MNC %2$d\nЗона %3$d · Cell %4$d\nРадиус %5$s · Образцов %6$s</string>
    <string name="map_cell_towers_sync_queued">Локальная база OpenCellID ещё пуста. Загрузка сотовых вышек поставлена в очередь.</string>
    <string name="map_cell_tower_search_title">Поиск сотовой вышки</string>
    <string name="map_cell_tower_search_hint">Cell ID или Area</string>
    <string name="map_cell_tower_search_not_found">Сотовая вышка не найдена</string>
    <string name="map_cell_tower_search_invalid">Введите числовой Cell ID или Area</string>
    <string name="map_cell_tower_search_results">Найдено вышек: %1$d</string>
    <string name="map_current_cell_tower_title">Текущая сотовая вышка</string>
    <string name="map_current_cell_tower_loading">Определяем подключенную вышку...</string>
    <string name="map_current_cell_tower_unavailable">Подключенная сотовая вышка недоступна</string>
    <string name="map_current_cell_tower_change_action">Сменить сотовую вышку</string>
    <string name="map_current_cell_tower_blacklisted">Вышка добавлена в локальный blacklist SantiWay. Android не разрешает обычному приложению принудительно отключить модем от вышки или выбрать другую базовую станцию.</string>
    <string name="map_current_cell_tower_root_reconnect_requested">Вышка добавлена в blacklist. Root-доступ получен, запрошено переподключение радиомодуля. Новую вышку выбирает модем и сеть оператора.</string>
    <string name="map_current_cell_tower_root_reconnect_failed">Вышка добавлена в blacklist, но root-команда переподключения не выполнилась на этом устройстве.</string>
    <string name="map_current_cell_tower_blacklisted_status">В локальном blacklist:\n%1$s</string>
    <string name="map_layer_osm_standard">OSM · стандартная</string>
    <string name="map_layer_osm_humanitarian">OSM · контрастная</string>
    <string name="map_layer_google_standard">Google · карта</string>
    <string name="map_layer_google_satellite">Google · спутник</string>
    <string name="map_layer_google_hybrid">Google · гибрид</string>
    <string name="map_layer_yandex_standard">Yandex · карта</string>
    <string name="map_layer_yandex_satellite">Yandex · спутник</string>
    <string name="geolocation_protocol_label">Протокол геолокации:</string>
    <string name="target_detection_label">Обнаружение target устройств</string>
    <string name="use_static_coordinates">Использовать статические координаты</string>
    <string name="latitude_hint">Широта</string>
    <string name="longitude_hint">Долгота</string>
    <string name="select_point_on_map">Выбрать точку на карте</string>
    <string name="save_general_settings">Сохранить общие настройки</string>
    <string name="scanner_settings_title">Настройки сканера</string>
    <string name="select_scanner_label">Выберите сканер:</string>
    <string name="scan_interval_hint">Интервал сканирования (сек)</string>
    <string name="signal_strength_hint">Сила сигнала обнаружения</string>
    <string name="enabled_label">Включен</string>
    <string name="save_scanner_settings">Сохранить настройки сканера</string>
    <string name="status_target">TARGET</string>
    <string name="status_all">ВСЕ</string>
    <string name="status_safe">SAFE</string>
    <string name="search_by_name_or_mac_hint">Поиск по имени или MAC</string>
    <string name="default_folder_unified_data">Основная</string>
    <string name="timer_zero">00:00:00</string>
    <string name="content_desc_start_pause">Start/Pause</string>
    <string name="content_desc_snapshot">Snapshot</string>
    <string name="content_desc_snapshot_trigger">Сделать устройства снапшота триггерными</string>
    <string name="content_desc_wifi_icon">Wi-Fi Icon</string>
    <string name="content_desc_bluetooth_icon">Bluetooth Icon</string>
    <string name="content_desc_cellular_icon">Cellular Icon</string>
    <string name="last_sent_label">Последняя отправка</string>
    <string name="datetime_placeholder">--:--:-- --.--.----</string>
    <string name="status_target_en">Target</string>
    <string name="status_safe_en">Safe</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">−</string>
    <string name="content_desc_center_map">Center map</string>
    <string name="content_desc_filter">Filter</string>
    <string name="content_desc_refresh">Refresh</string>
    <string name="device_label">Устройство</string>
    <string name="device_operator_placeholder">MTS RUS [31]</string>
    <string name="mac_address_label">MAC адрес:</string>
    <string name="mac_address_placeholder">C2:18:03:00:3D:7E</string>
    <string name="type_label">Тип:</string>
    <string name="type_cell_placeholder">Cell</string>
    <string name="cid_label">CID:</string>
    <string name="cid_placeholder">18168328 (LTE)</string>
    <string name="first_detection_label">Первое обнаружение:</string>
    <string name="first_detection_placeholder">01.04.2026 13:47:25</string>
    <string name="last_detection_label">Последнее обнаружение:</string>
    <string name="last_detection_placeholder">01.04.2026 13:48:54</string>
    <string name="detections_label">Обнаружения:</string>
    <string name="count_placeholder">20</string>
    <string name="notification_details_title">Детали уведомления</string>
    <string name="notification_title_preview">Обнаружен неавторизованный MAC</string>
    <string name="notification_datetime_preview">Дата и время: 2025-12-13 09:19:18</string>
    <string name="notification_body_preview">В области обнаружен неизвестный Bluetooth-адрес, помеченный как ALARM. Требуется проверка.</string>
    <string name="attached_files_label">Прикрепленные файлы:</string>
    <string name="notifications_title">Уведомления</string>
    <string name="no_notifications">Нет уведомлений</string>
    <string name="clear_all">Очистить все</string>
    <string name="content_desc_selected_point">Выбранная точка</string>
    <string name="select_this_point">Выбрать эту точку</string>
    <string name="select_folder_title">Выберите папку</string>
    <string name="select_folder_for_scan_title">Выберите папку для сканирования</string>
    <string name="content_desc_rename_icon">Rename Icon</string>
    <string name="rename_action">Переименовать</string>
    <string name="content_desc_clear_icon">Clear Icon</string>
    <string name="clear_action">Очистить</string>
    <string name="grey_action">Grey</string>
    <string name="content_desc_alarm_icon">Alarm Icon</string>
    <string name="content_desc_safe_icon">Safe Icon</string>
    <string name="create_new_folder_title">Создать новую папку</string>
    <string name="enter_folder_name_hint">Введите название папки</string>
    <string name="content_desc_notifications_icon">Notifications Icon</string>
    <string name="content_desc_settings_icon">Settings Icon</string>
    <string name="settings_title">Настройки</string>
    <string name="devices_title">Устройства</string>
    <string name="create_action">Создать</string>
    <string name="delete_action">Удалить</string>
    <string name="network_scanner_title">Сетевой сканнер</string>
    <string name="mac_sample_placeholder">00:11:22:33:44:55</string>
    <string name="type_placeholder">Тип</string>
    <string name="time_placeholder">Time</string>
    <string name="content_desc_share_json">Share JSON</string>
    <string name="content_desc_remove_from_list">Удалить из списка</string>
    <string name="info_action">Info</string>
    <string name="content_desc_delete_icon">Удалить иконку</string>
    <string name="folder_name_placeholder">Имя папки</string>
    <string name="content_desc_select">Select</string>
    <string name="folder_name_placeholder2">Название папки</string>
    <string name="notification_title_placeholder">Заголовок уведомления</string>
    <string name="notification_date_placeholder">2025-12-13 09:19:18</string>
    <string name="content_desc_delete_notification">Удалить уведомление</string>
    <string name="startScan">Начать сканирование</string>
    <string name="stopScan">Остановить сканирование</string>
    <string name="database">Перейти в базу данных</string>
    <string name="navigation_drawer_open">Открыть навигационную панель</string>
    <string name="navigation_drawer_close">Закрыть навигационную панель</string>
    <string name="app_name">Network Scanner</string>
    <string name="time_label_initial">Время работы : 00:00:00</string>
    <string name="bluetooth_text">Bluetooth</string>
    <string name="wifi_text">Wi-Fi</string>
    <string name="cellular_text">Cellular</string>
    <string name="device_type_bluetooth_filter">Bluetooth</string>
    <string name="device_type_cell_towers_filter">Cell towers</string>
    <string name="device_type_all_filter">All</string>
    <string name="scanning_status">Сканнируется…</string>
    <string name="stopped_status">Остановлено</string>
    <string name="coordinates_text">Корректные координаты: 51.5074, -0.1278</string>
    <string name="button_start">СТАРТ</string>
    <string name="button_stop">СТОП</string>
    <string name="nav_create_folder">Очистить папку</string>
    <string name="nav_delete">Удалить</string>
    <string name="nav_make_safe">Сделать safe</string>
    <string name="nav_clear_status">Очистить статус</string>
    <string name="nav_clear_triggers">Очистить триггеры</string>
    <string name="logo_description">Application logo</string>
    <string name="toolbar_title">Network Scanner</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="status_standby">Standby</string>
    <string name="status_scanning">Scanning</string>
    <string name="status_connected">Подключено</string>
    <string name="wifi_status_label">Wi-Fi Статус:</string>
    <string name="cellular_status_label">Cellular Статус:</string>
    <string name="coordinates_label">Координаты:</string>
    <string name="user_name_placeholder">Имя пользователя</string>
    <string name="device_list_title">Список устройств</string>
    <string name="title_wifi_status">WiFi Статус</string>
    <string name="dialog_save_upper">СОХРАНИТЬ</string>
    <string name="esp32_management_title">Управление ESP32</string>
    <string name="esp32_status_disconnected">ESP32 отключена</string>
    <string name="esp32_find_and_connect">Найти и подключить ESP32</string>
    <string name="connected_devices_title">История подключённых устройств</string>
    <string name="column_altitude">Высота</string>
    <string name="esp32_settings_title">Настройки ESP32</string>
    <string name="esp32_connect">Подключить</string>
</resources>