<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_static_location_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.osmdroid.views.MapView
        android:id="@+id/static_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/center_pin"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:translationY="-21dp"
        android:src="@drawable/ic_map_pin"
        android:contentDescription="@string/content_desc_selected_point" />

    <LinearLayout
        android:id="@+id/custom_zoom_container"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/btn_zoom_in"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_map_zoom_button"
            android:gravity="center"
            android:text="@string/zoom_in"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_zoom_out"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_map_zoom_button"
            android:gravity="center"
            android:text="@string/zoom_out"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_select_static_location"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:layout_margin="60dp"
        android:text="@string/select_this_point"
        android:textColor="@android:color/white"
        android:backgroundTint="#172A46" />

</FrameLayout>
